# ChangeLog for dev-util/catalyst
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.278 2015/04/08 17:54:02 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> catalyst-2.0.16.ebuild,
  catalyst-2.0.9999.ebuild, catalyst-2.9999.ebuild, catalyst-9999.ebuild:
  Drop old Python implementations

  30 Jan 2015; Mike Gilbert <floppym@gentoo.org> catalyst-2.0.18-r1.ebuild:
  Expand PATCHES array correctly.

*catalyst-2.0.18-r1 (30 Jan 2015)

  30 Jan 2015; Brian Dolbec <dolsen@gentoo.org> +catalyst-2.0.18-r1.ebuild,
  +files/catalyst-2.0.18-Do-notuntarwith--acls.patch:
  Bump 2.0.18 with the Do-notuntarwith--acls patch.

*catalyst-2.0.18 (09 Jan 2015)

  09 Jan 2015; Brian Dolbec <dolsen@gentoo.org> +catalyst-2.0.18.ebuild:
  Version bump.

*catalyst-2.0.17 (18 May 2014)

  18 May 2014; Brian Dolbec <dolsen@gentoo.org> -catalyst-2.0.12.2.ebuild,
  -catalyst-2.0.14.ebuild, -catalyst-2.0.15.ebuild, +catalyst-2.0.17.ebuild:
  Version bump, remove old versions.

  02 Mar 2014; Brian Dolbec <dolsen@gentoo.org> catalyst-9999.ebuild:
  Swap out the ebuild for the new python structure.

  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> catalyst-2.0.12.2.ebuild,
  catalyst-2.0.14.ebuild, catalyst-2.0.15.ebuild, catalyst-2.0.16.ebuild,
  catalyst-2.0.9999.ebuild, catalyst-2.9999.ebuild, catalyst-9999.ebuild:
  Add arm64 love.

  12 Jan 2014; Brian Dolbec <dolsen@gentoo.org> catalyst-9999.ebuild:
  Add my dev space repo as backup to g.o.g.o

*catalyst-2.0.16 (12 Jan 2014)

  12 Jan 2014; Brian Dolbec <dolsen@gentoo.org> +catalyst-2.0.16.ebuild:
  Version bump with the sem_open bugfix and the TERM passthru fix.

  02 Jan 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  catalyst-2.0.15.ebuild, catalyst-2.9999.ebuild, catalyst-9999.ebuild:
  Synchonize release and live ebuilds (2.9999 is special as it's tracking the