@@ -10,14 +10,16 @@ AUX lftp-4.6.0-no-ssl.patch 849 SHA256 d73daa09b372718669c7d3ce61df015f8a7be6a5f
 DIST lftp-4.6.0.tar.xz 1499160 SHA256 3ad874cea247380d3037931fe60876a7d5e2c5be05e2faca9f22af7dfeca5b93 SHA512 5e92158334cd91b39f677467791ba7bfbe72aff7443a6ca2255c9e1daa85d8a284090d2286ad179fe2d54475dcf7cc35afce1cd8fab36db42f3c0a64efccf5a7 WHIRLPOOL 858e9ea99c53de17b52fac6aa7b02c148d02cd201fd76dce15648c018c47d9b600f16e9f575edaf5c1fa1e15d8a02eb8b53494b7a48b41cc6ef616101e885af9
 DIST lftp-4.6.2.tar.gz 2637499 SHA256 7e5291a0638f1602fd7f98c407fbc191f4d29677f469dd0455f66b48fc7953ca SHA512 68ece64e27fcb4abcd7598856e2f5ff5ab427f304ff27659fd39a5cc79b9a75ef2993a3ca5cea91f64b10eb9ff8406e0df87cf966d4a7830b9d598c8fb550e9c WHIRLPOOL 4d50f86bb71c18934b27e520cf861f9efaeeb021fc403d0b6ae20e685454098d69f6d3144fd7c5a3bf6de31fd6e4cbc34f207ec9348a850b7c5a031208dc8472
 EBUILD lftp-4.6.0.ebuild 2306 SHA256 b3b2b5f744a8a283f58b8960d3a659f582ff2c0565f446cda36cbad406fcc6a6 SHA512 673fc31696a830db7af628266ff715b01e0d39abf68ccfc06da2ccf87845804458fc52f0aefabe9bf1715afab2a18f4ed04514152c82ae209b0bb26d18bb0fb5 WHIRLPOOL 1b51ea3e12ea63a4cdcaf4498ccc4908b3bf36d418d34d00c2e4c11f0d487feea94c79b2978d36d52ea301e3e9f251fc1bf1b0e1b0cd57e5264d10ec65f75ae8
-EBUILD lftp-4.6.2.ebuild 2322 SHA256 6ab3b17aa2692ea6dd79fa505c46c513a30f7555d7529e1c970554958be0f558 SHA512 69a4e04133e20ff66dec8256ebcaf95d7aa98ae54ceacc5aeb81cd9dd1b8586dbfacd28c8dec21cf144851652c31bb06c0d6e96aebe67800e4d43f3fe4e9c5ee WHIRLPOOL 20fb68992e865f07e9d64f0b19b878cf5d4a09b30e6a3263bc55904cc3043726469ecadb51e9c7716a04cec0eeee749e6906e34dc5af8891ed911e1ce007b550
+EBUILD lftp-4.6.2.ebuild 2323 SHA256 9ff434c4a924d104535492bbab2532e73781bb1ddfecf309da0fd859c100b05b SHA512 b27b80a440a77eb28b7c5aa8c9f1b63a98b41d4c706f484f645c62a04e6176fb40b4168781ae09801e88132c7e6db6854b76a10b194259f9c60b46fd13a765b9 WHIRLPOOL f75656839c535af1ea487bfb7b2122476a4fa2c21f13df464c84ed69fb566efaac9f1a38032bb6e725e034748097fa1f2db65cb14b6c64637b30f2f72acd2df9
 EBUILD lftp-9999.ebuild 2021 SHA256 6cfc050800945aaf4d225427378922679f7b9cb7e87bad9cfde41cbe3457fd0a SHA512 7aab3d43c2af2d341fcdcdce7626fe1492010c14668cdfd9fa415b454184e65327a294832f0add04bddd05c4d3aa9be2991483887c499647b6a6833ed099d1dd WHIRLPOOL 8f31af012acac62c2444e362204b7bf7d097a82a2242cfcc1f718d391bd068c6fbe780732a173a02fc306639a51466a45c48233c0dbde147dfa20409784e1541
-MISC ChangeLog 64916 SHA256 a433dfb59202cb504cfc7908546b88c8536812ef5e9719db190255c76dfeab78 SHA512 d779891418f5cf3dcb296c6a563814de0968667a6db944fc7b1f50cf93b8d833069e3b8d9f2427b6bab1fdf364d86170e66b96848cc8c486b40644fc66738a89 WHIRLPOOL a0f6d675d7562b709832fe0509d16dcb19e19f0bbd7781a17722fa849c2692aaeed8593bb3f77c892b2ace5ee42f8de864deb250f6cae58bdba8930a346d9ead
+MISC ChangeLog 65019 SHA256 1aae97c6cf8815950c26ccb49b9db51ba6a1e1a8a8809ef2385ae0c284c7f3d2 SHA512 6d3dadc1516f02e69837dfab6f86947f58897c9952d46b00e3ea87250798a8c2dd1a41252bfecaef84ef69e7483c7f76f66775c3b6d27dcd116e20caf3f537a7 WHIRLPOOL 7450f5729c6f19463401a614137bedbd70a6371c45d786859fb7ccb4b2ded8754248a14ef3aa33b3991ac5c240afa4d1d3802075ba11e6f6fc838216896b3fe0
 MISC metadata.xml 531 SHA256 ce1a5e5ed227a35582fbc8cae768a0f6b7769ac49194197926882f47600b519f SHA512 6058e3d0fbf8032fc97c48d9742afea487ac89bbe88281e4a4fd392018a42c7ff5bab39b7f01b16c70bd24735cf3b6b9ea613f957f71075f095cf3b109516cd5 WHIRLPOOL cc07076f948d4cbd81a4bd799c8e5f4a06f5665a732034456778d51c7bdd8486c04cd55bfdbdf85f013379f231b535508e46572b191a7bd30d04f6692b0647c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlU2ooMACgkQCaWpQKGI+9RKRQCfddNsWayOSwii8RosXU2eJfIW
-hAAAn2ilFB7+yHK910Zz60rJZkTn9Vwx
-=hQWG
+iJwEAQEIAAYFAlU7rucACgkQG9wOWsQutdYd7QP9HZ/z3uAkXcXbe6GqiHmmEtq6
+zl9uXiKtRN+loddanCCQbehLVpicT9MTX6rhpX8Uqn7L8HcexZ72CA23MNkHIifD
+8+xZ4UOTdmvcBNq7wWue4HK+a7ujFka+RmDCA3ZnqkSqA2Ku9xZemW2j0T8Yi2Zx
+1I1hgGPML7fyqq5bG1s=
+=3uzm
 -----END PGP SIGNATURE-----
