@@ -1,6 +1,9 @@
 # ChangeLog for net-ftp/lftp
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.518 2015/04/21 19:18:26 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lftp/ChangeLog,v 1.519 2015/04/25 15:14:34 zlogene Exp $
+
+  25 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> lftp-4.6.2.ebuild:
+  sparc stable wrt bug #536036
 
   21 Apr 2015; Pacho Ramos <pacho@gentoo.org> lftp-4.6.2.ebuild:
   ppc stable wrt bug #536036
