@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.278 2015/04/08 17:54:02 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.279 2015/04/25 15:27:34 dolsen Exp $
+
+  25 Apr 2015; Brian Dolbec <dolsen@gentoo.org> catalyst-2.0.9999.ebuild,
+  catalyst-2.9999.ebuild, catalyst-9999.ebuild:
+  Fix live ebuilds for new EGIT_SRC.
 
   08 Apr 2015; Michał Górny <mgorny@gentoo.org> catalyst-2.0.16.ebuild,
   catalyst-2.0.9999.ebuild, catalyst-2.9999.ebuild, catalyst-9999.ebuild:
